// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import CSV Drawer should render correctly 1`] = `
<div
  aria-modal="true"
  class="ant-drawer-content"
  role="dialog"
>
  <div
    class="ant-drawer-wrapper-body"
  >
    <div
      class="ant-drawer-header"
    >
      <div
        class="ant-drawer-header-title"
      >
        <button
          aria-label="Close"
          class="ant-drawer-close"
          type="button"
        >
          <svg
            data-testid="CloseSymbol"
          />
        </button>
        <div
          class="ant-drawer-title"
        >
          <div
            class="sc-hKMtZM lctlMc"
          >
            Import from file
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-drawer-body"
    >
      <span>
        <div
          class="ant-upload ant-upload-drag"
        >
          <span
            class="ant-upload ant-upload-btn"
            role="button"
            tabindex="0"
          >
            <input
              accept=".csv"
              style="display: none;"
              type="file"
            />
            <div
              class="ant-upload-drag-container"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="height: 90px;"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography"
                  >
                    Drag & drop file here or
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 eAazoW"
                    type="button"
                  >
                    <span>
                      Browser
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </span>
        </div>
      </span>
      <ul>
        <li>
          <a
            href="#"
          >
            Download template
          </a>
        </li>
        <li>
          File format must be csv
        </li>
        <li>
          File may contain up to 512 entries
        </li>
        <li>
          File size cannot exceed 5 MB
        </li>
      </ul>
    </div>
    <div
      class="ant-drawer-footer"
    >
      <div>
        <button
          class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bxQmA-d"
          disabled=""
          type="button"
        >
          <span>
            Import
          </span>
        </button>
        <button
          class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 eAazoW"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Import CSV Drawer show errors 1`] = `
<div
  aria-modal="true"
  class="ant-drawer-content"
  role="dialog"
>
  <div
    class="ant-drawer-wrapper-body"
  >
    <div
      class="ant-drawer-header"
    >
      <div
        class="ant-drawer-header-title"
      >
        <button
          aria-label="Close"
          class="ant-drawer-close"
          type="button"
        >
          <svg
            data-testid="CloseSymbol"
          />
        </button>
        <div
          class="ant-drawer-title"
        >
          <div
            class="sc-hKMtZM lctlMc"
          >
            Import from file
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-drawer-body"
    >
      <span>
        <div
          class="ant-upload ant-upload-drag"
        >
          <span
            class="ant-upload ant-upload-btn"
            role="button"
            tabindex="0"
          >
            <input
              accept=".csv"
              style="display: none;"
              type="file"
            />
            <div
              class="ant-upload-drag-container"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="height: 90px;"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography ant-typography-danger"
                  >
                    <span
                      aria-label="warning"
                      class="anticon anticon-warning"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="warning"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                        />
                      </svg>
                    </span>
                     
                    3 errors found.
                  </span>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <a
                    class="ant-typography"
                    href="https://aaa.cc/tenant/d1ec841a4ff74436b23bca6477f6a631/002.csv"
                  >
                    See errors
                  </a>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 eAazoW"
                    type="button"
                  >
                    <span>
                      Change File
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </span>
        </div>
      </span>
      <ul>
        <li>
          <a
            href="#"
          >
            Download template
          </a>
        </li>
        <li>
          File format must be csv
        </li>
        <li>
          File may contain up to 512 entries
        </li>
        <li>
          File size cannot exceed 5 MB
        </li>
      </ul>
    </div>
    <div
      class="ant-drawer-footer"
    >
      <div>
        <button
          class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bxQmA-d"
          disabled=""
          type="button"
        >
          <span>
            Import
          </span>
        </button>
        <button
          class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 eAazoW"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
